<resources>
    <string name="app_name" translatable="false">Calculator</string>

    <string name="zero" translatable="false">0</string>
    <string name="one" translatable="false">1</string>
    <string name="two" translatable="false">2</string>
    <string name="three" translatable="false">3</string>
    <string name="four" translatable="false">4</string>
    <string name="five" translatable="false">5</string>
    <string name="six" translatable="false">6</string>
    <string name="seven" translatable="false">7</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>

    <string name="addition" translatable="false">+</string>
    <string name="subtraction" translatable="false">-</string>
    <string name="multiplication" translatable="false">×</string>
    <string name="division" translatable="false">÷</string>
    <string name="power" translatable="false">^</string>
    <string name="parenthesis" translatable="false">()</string>
    <string name="square_root" translatable="false">√</string>
    <string name="factorial" translatable="false">!</string>
    <string name="sine" translatable="false">sin</string>
    <string name="cosine" translatable="false">cos</string>
    <string name="tangent" translatable="false">tan</string>
    <string name="pi" translatable="false">π</string>
    <string name="euler_number" translatable="false">e</string>
    <string name="natural_logarithm" translatable="false">ln</string>
    <string name="absolute" translatable="false">|x|</string>
    <string name="logarithm" translatable="false">log</string>

    <string name="decimal" translatable="false">.</string>
    <string name="negative_positive" translatable="false">+/-</string>
    <string name="clear" translatable="false">C</string>
    <string name="delete">Delete</string>
    <string name="equals" translatable="false">=</string>

    <string name="max_decimal_length">"Maximum number of decimal digits is: %s"</string>
    <string name="max_number_length">Maximum number of digits is: %s</string>
    <string name="result_not_valid">Result is not a valid number</string>
    <string name="expression_not_valid">Expression is not valid</string>
</resources>