<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/input_expression"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:gravity="end"
        android:textColor="@color/user_input_text"
        android:textSize="45sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints=""
        android:inputType="text"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/result_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:textColor="@color/user_input_result_text"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/input_expression" />

    <ImageButton
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/delete"
        android:onClick="onClickDelete"
        android:text="@string/delete"
        app:backgroundTint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/backspace" />

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_expression"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_clear"

                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickClear"
                android:text="@string/clear"
                android:textColor="@color/teal_200"
                android:textSize="40sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_brackets"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertOpenClosedParenthesis"
                android:text="@string/parenthesis"
                android:textColor="@color/teal_200"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_power"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertOperation"
                android:text="@string/power"
                android:textColor="@color/teal_200"
                android:textSize="40sp"
                app:backgroundTint="@color/button_operation_bg"
                app:backgroundTintMode="src_in" />

            <Button
                android:id="@+id/btn_division"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertOperation"
                android:text="@string/division"
                android:textColor="@color/teal_200"
                android:textSize="40sp"
                app:backgroundTint="@color/button_operation_bg" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_number_seven"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/seven"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_number_eight"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/eight"
                android:textColor="@color/black"
                android:textSize="40sp"
                app:backgroundTint="@color/purple_700" />

            <Button
                android:id="@+id/btn_number_nine"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/nine"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_multiplication"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertOperation"
                android:text="@string/multiplication"
                android:textColor="@color/teal_200"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_number_four"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/four"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_number_five"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/five"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_number_six"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/six"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_subtraction"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertOperation"
                android:text="@string/subtraction"
                android:textColor="@color/teal_200"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_number_one"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/one"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_number_two"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/two"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_number_three"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/three"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_addition"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertOperation"
                android:text="@string/addition"
                android:textColor="@color/teal_200"
                android:textSize="40sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_dot"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDot"
                android:text="@string/decimal"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_number_zero"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertDigit"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_positive_negative"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertPositiveNegativeSign"
                android:text="@string/negative_positive"
                android:textColor="@color/black"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btn_equal"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClickInsertResult"
                android:text="@string/equals"
                android:textColor="@color/white"
                android:textSize="40sp"
                app:backgroundTint="@color/button_equals" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>